--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-pandas==2.1.4
-numpy==1.26.4
-python-dateutil==2.8.2
+Flask
+Flask-CORS
+pandas
+numpy
+python-dateutil
